added regular log4j2 json config